# mc-mods-debug

./: .gitignore  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
@types/mcmd/: enums.ts  index.d.ts
lib/filesystem/: index.ts
public/: global.css  index.html
spec/app/lib/filesystem/: index.spec.ts
spec/helpers/: testPaths.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: mods.ts  path-parse.ts
src/components/: ModsTable.svelte
