[package]
name = "mc-mods-debug"
version = "1.1.0"
description = "Debug Minecraft Mods by Process of Elimination"
authors = ["Thomas Creeten"]
license = "MIT"
repository = "https://github.com/CREEATION/mc-mods-debug"
default-run = "mc-mods-debug"
edition = "2018"
build = "src/build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.1", features = ["fs-read-dir", "fs-rename-file"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
